micro-frontend-at-ingress/stack.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ssi-service-1
  namespace: default
spec:
  containers:
  - name: common
    image: nginx:1.21.6-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: nginx-index-file
        mountPath: /usr/share/nginx/html/
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-configmap-service-1
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: ssi-service-2
    app.kubernetes.io/name: ssi-service-2
  name: ssi-service-2
  namespace: default
spec:
  containers:
  - name: common
    image: nginx:1.21.6-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: nginx-index-file
        mountPath: /usr/share/nginx/html/
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-configmap-service-2
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: ssi-service-3
    app.kubernetes.io/name: ssi-service-3
  name: ssi-service-3
  namespace: default
spec:
  containers:
  - name: common
    image: nginx:1.21.6-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: nginx-index-file
        mountPath: /usr/share/nginx/html/
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-configmap-service-3
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ssi-service-1
    app.kubernetes.io/name: ssi-service-1
  name: ssi-service-1
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: ssi-service-1
    app.kubernetes.io/name: ssi-service-1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ssi-service-2
    app.kubernetes.io/name: ssi-service-2
  name: ssi-service-2
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: ssi-service-2
    app.kubernetes.io/name: ssi-service-2
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ssi-service-3
    app.kubernetes.io/name: ssi-service-3
  name: ssi-service-3
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: ssi-service-3
    app.kubernetes.io/name: ssi-service-3
  type: ClusterIP
